objects/LLC_BI__Service_Mgmt_Detail__c.object
<CustomObject>
    <description>This object captures more information about a service and has the ability to tie it back to higher level details in Service Mgmt.</description>
    <fields>
        <fullName>LLC_BI__Coverage_Amount__c</fullName>
        <description>The user populates this optional currency field to state the total amount the service covers. By default, this field is blank.</description>
        <inlineHelpText>Enter the total amount the service covers.</inlineHelpText>
        <label>Coverage Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Deductible__c</fullName>
        <description>The user populates this optional currency field to state the policy’s service deductible. By default, this field is blank.</description>
        <inlineHelpText>Enter the total service deductible.</inlineHelpText>
        <label>Deductible</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Effective_Date__c</fullName>
        <description>The user populates this optional Date field to show when the service goes into effect. By default, this field is blank.</description>
        <inlineHelpText>Use this field to determine when the service goes into effect.</inlineHelpText>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Expiration_Date__c</fullName>
        <description>The user populates this optional Date field to determine when the service is no longer in effect. By default, this field is blank.</description>
        <inlineHelpText>Use this field to determine when the service is no longer in effect.</inlineHelpText>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Occurrence_Amount__c</fullName>
        <description>The user populates this optional currency field to determine how much money is given to the borrower per occurrence. By default, this field is blank.</description>
        <inlineHelpText>Enter the total amount per occurrence.</inlineHelpText>
        <label>Occurrence Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Policy_Number__c</fullName>
        <description>The system auto populates this optional text field to display the policy number associated with the service.</description>
        <inlineHelpText>Displays the policy number associated with the service.</inlineHelpText>
        <label>Policy Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Service_Mgmt__c</fullName>
        <description>The system uses this required lookup field to locate the Service Management record.</description>
        <inlineHelpText>The lookup for the Service Management record.</inlineHelpText>
        <label>Service Mgmt</label>
        <referenceTo>LLC_BI__Service_Mgmt__c</referenceTo>
        <relationshipLabel>Service Mgmt Details</relationshipLabel>
        <relationshipName>Service_Mgmt_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Status__c</fullName>
        <description>The user populates this optional picklist field to display the status of the service being detailed.</description>
        <inlineHelpText>Select the appropriate status of the service.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Ordered/In Progress</fullName>
                </value>
                <value>
                    <fullName>Received</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Recalled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Sub_Type__c</fullName>
        <description>The user populates this optional picklist field to determine the sub type of service details being added. By default, this field appears after a service type is selected.</description>
        <inlineHelpText>Select a service sub type.</inlineHelpText>
        <label>Sub Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Builder Risk</fullName>
                </value>
                <value>
                    <fullName>Business Interruption</fullName>
                </value>
                <value>
                    <fullName>Business Personal Property</fullName>
                </value>
                <value>
                    <fullName>Credit</fullName>
                </value>
                <value>
                    <fullName>Collision &amp; Comprehensive</fullName>
                </value>
                <value>
                    <fullName>Disability</fullName>
                </value>
                <value>
                    <fullName>Earthquake</fullName>
                </value>
                <value>
                    <fullName>Flood Building</fullName>
                </value>
                <value>
                    <fullName>Flood Contents</fullName>
                </value>
                <value>
                    <fullName>Hazard</fullName>
                </value>
                <value>
                    <fullName>Liability</fullName>
                </value>
                <value>
                    <fullName>Life</fullName>
                </value>
                <value>
                    <fullName>Miscellaneous</fullName>
                </value>
                <value>
                    <fullName>Multi Peril - Excluding Flood</fullName>
                </value>
                <value>
                    <fullName>Multi Peril - Including Flood</fullName>
                </value>
                <value>
                    <fullName>Real and Personal Property</fullName>
                </value>
                <value>
                    <fullName>Re-Insurance</fullName>
                </value>
                <value>
                    <fullName>Sinkhole</fullName>
                </value>
                <value>
                    <fullName>Terrorism</fullName>
                </value>
                <value>
                    <fullName>Title</fullName>
                </value>
                <value>
                    <fullName>Windstorm and Hail</fullName>
                </value>
                <value>
                    <fullName>Workers Compensation</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Update</fullName>
                </value>
                <value>
                    <fullName>Desktop</fullName>
                </value>
                <value>
                    <fullName>Evaluation Only</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Type__c</fullName>
        <description>The user populates this optional picklist field to determine the type of service being detailed. By default, this field is set to Insurance.</description>
        <inlineHelpText>Select a service type.</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Appraiser</fullName>
                </value>
                <value>
                    <fullName>Attorney</fullName>
                </value>
                <value>
                    <fullName>Inspector</fullName>
                </value>
                <value>
                    <fullName>Insurance</fullName>
                </value>
                <value>
                    <fullName>Third Party Reports</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cm_Building_Size_Sq_Ft__c</fullName>
        <description>This field is optional and specifies the subject facility&apos;s building size. It is manually populated.</description>
        <label>Building Size (Sq Ft)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cm_Contact_Phone__c</fullName>
        <description>Formula pulling in Phone populated on the Contact from the related Service Mgmt record.</description>
        <formula>LLC_BI__Service_Mgmt__r.LLC_BI__Contact__r.Phone</formula>
        <inlineHelpText>Formula pulling in Phone populated on the Contact from the related Service Mgmt record.</inlineHelpText>
        <label>Contact Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cm_Current_Property_Use__c</fullName>
        <description>This field is optional and describes the subject property/building&apos;s current usage. It is manually populated.</description>
        <label>Current Property Use / Occupants</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cm_EPA_Assessment_Type__c</fullName>
        <description>This field is optional and manually selected when entering third party report detail about an EPA Assessment. The picklist options available are DEPENDENT on Order Type being set as EPA Assessment. If selected, allows for the dropdown values as shown in this picklist [ RSRA, Phase 1, Phase 2 ]</description>
        <inlineHelpText>Dependent on &quot;Order Type&quot; being set as EPA. Values are RSRA, Phase 1, and Phase 2</inlineHelpText>
        <label>EPA Assessment Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>cm_Order_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>RSRA</fullName>
                </value>
                <value>
                    <fullName>Phase 1</fullName>
                </value>
                <value>
                    <fullName>Phase 2</fullName>
                </value>
                <value>
                    <fullName>Transaction Screen</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cm_EPA_Vendor__c</fullName>
        <description>This picklist is optional and manually selected when entering third party report detail about an EPA Assessment. It is a list of vendors to have 3rd part reports ordered for when EPA Assessment Type is selected (helps run 3rd party reports ordering)</description>
        <label>EPA Vendor</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>cm_EPA_Assessment_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AEI</fullName>
                </value>
                <value>
                    <fullName>PES</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cm_Evaluation_Type__c</fullName>
        <label>Evaluation Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Interior</fullName>
                </value>
                <value>
                    <fullName>Exterior</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cm_Legal_Description__c</fullName>
        <label>Legal Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cm_Licensed_Appraiser_Allowed__c</fullName>
        <description>Custom field to track if there is a licensed appraiser allowed.</description>
        <inlineHelpText>Tracks if a Licensed Appraiser is Allowed for General or Residential purposes.</inlineHelpText>
        <label>Licensed Appraiser Allowed</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>General</fullName>
                </value>
                <value>
                    <fullName>Residential</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cm_Order_Appraisal__c</fullName>
        <label>Order Appraisal</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Bid Only</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cm_Order_Type__c</fullName>
        <label>Order Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>As Is</fullName>
                </value>
                <value>
                    <fullName>As Built</fullName>
                </value>
                <value>
                    <fullName>As Constructed</fullName>
                </value>
                <value>
                    <fullName>EPA Assessment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cm_Previous_Property_Use_s__c</fullName>
        <description>This field specifies the text value used to document previous use(s) of subject property. Value can have impact on report findings (e.g. Subject property was previously a Gas Station, thus ground water contamination is likely).</description>
        <label>Previous Property Use(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cm_Property_Address__c</fullName>
        <description>This field is optional and specifies the subject property&apos;s address. It is automatically populated with the Property Address populated on the Collateral Mgmt record associated to the Service Mgmt.</description>
        <formula>LLC_BI__Service_Mgmt__r.LLC_BI__Collateral__r.LLC_BI__Street_Address__c&amp;&apos; &apos;&amp; LLC_BI__Service_Mgmt__r.LLC_BI__Collateral__r.LLC_BI__City__c&amp;&quot;, &quot;&amp;TEXT(LLC_BI__Service_Mgmt__r.LLC_BI__Collateral__r.LLC_BI__State__c)&amp;&apos; &apos;&amp;LLC_BI__Service_Mgmt__r.LLC_BI__Collateral__r.LLC_BI__Zip_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field is optional and specifies the subject property&apos;s address. It is automatically populated with the Property Address populated on the Collateral Mgmt record associated to the Service Mgmt.</inlineHelpText>
        <label>Property Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cm_Property_County__c</fullName>
        <description>This field is optional and specifies the subject property&apos;s county. It is automatically populated with the Property County populated on the Collateral Mgmt record associated to the Service Mgmt.</description>
        <formula>LLC_BI__Service_Mgmt__r.LLC_BI__Collateral__r.LLC_BI__County__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Property County</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cm_Property_Description__c</fullName>
        <description>This field is optional and describes the subject property. It is manually populated.</description>
        <label>Property Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cm_Property_Status__c</fullName>
        <description>This field is optional and specifies the subject property&apos;s status (Land Only, Improved, Under Construction, etc.). It is manually populated.</description>
        <label>Property Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Land Only</fullName>
                </value>
                <value>
                    <fullName>Improved</fullName>
                </value>
                <value>
                    <fullName>Under Construction</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cm_Property_Type__c</fullName>
        <description>This field is optional and specifies the subject property&apos;s Type (Raw Land, Land and Building, etc.) It is manually populated.</description>
        <label>Property Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Raw Land</fullName>
                </value>
                <value>
                    <fullName>Land and Building</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cm_Report_Detail__c</fullName>
        <description>This field is optional and specifies the text value used to provide comments regarding the subject assets and/or the request itself. It is manually populated.</description>
        <label>Report Request Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>cm_Report_Due_Date__c</fullName>
        <description>This field is optional and specifies the Date that the Third Party Report is expected to be completed by the vendor. It is manually populated.</description>
        <label>Report Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>cm_Report_Ordered__c</fullName>
        <description>This field is optional and specifies the date of the vendor&apos;s order of the Third Party Report. It can be different than the date that the Third Party Report was created in nCino. It is manually populated.</description>
        <label>Report Ordered</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>cm_Report_Rcvd__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Report Rcvd</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cm_Report_Type__c</fullName>
        <description>This field is optional and specifies the type of Third Party Report (Tax Verification, CRE Appraisal, EPA Assessment, Business Valuation, Residential Property Appraisal, Investment Property Appraisal, Equipment Appraisal, etc.). It is manually populated.</description>
        <label>Report Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Tax Verification</fullName>
                </value>
                <value>
                    <fullName>CRE Appraisal</fullName>
                </value>
                <value>
                    <fullName>Business Valuation</fullName>
                </value>
                <value>
                    <fullName>Residential Property Appraisal</fullName>
                </value>
                <value>
                    <fullName>Equipment Appraisal</fullName>
                </value>
                <value>
                    <fullName>Self-Contained</fullName>
                </value>
                <value>
                    <fullName>EPA Assessment</fullName>
                </value>
                <value>
                    <fullName>Investment Property Appraisal</fullName>
                </value>
                <value>
                    <fullName>Summary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cm_Requested_Approaches__c</fullName>
        <label>Requested Approaches</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cost</fullName>
                </value>
                <value>
                    <fullName>Income</fullName>
                </value>
                <value>
                    <fullName>Market Value</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cm_Requested_Property_Rights__c</fullName>
        <label>Requested Property Rights</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Fee Simple</fullName>
                </value>
                <value>
                    <fullName>Leased Fee</fullName>
                </value>
                <value>
                    <fullName>Leasehold</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cm_Requested_Values__c</fullName>
        <label>Requested Values</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Market Value As Is</fullName>
                </value>
                <value>
                    <fullName>Market Value At Stabilization</fullName>
                </value>
                <value>
                    <fullName>Market Value At Completion</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cm_Site_Size__c</fullName>
        <description>This field is optional and specifies the subject property&apos;s lot size. It is manually populated.</description>
        <label>Site Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cm_Year_Built__c</fullName>
        <description>This field is optional and specifies the year in which the subject property was built. It is manually populated.</description>
        <label>Year Built</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cm_Zoning__c</fullName>
        <description>This field is optional and specifies the of subject property&apos;s zoning type (Residential, Commercial, Industrial, Agriculture, etc.). It is manually populated.</description>
        <label>Zoning</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Residential</fullName>
                </value>
                <value>
                    <fullName>Commercial</fullName>
                </value>
                <value>
                    <fullName>Industrial</fullName>
                </value>
                <value>
                    <fullName>Agriculture</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Service Mgmt Detail</label>
    <nameField>
        <label>Service Mgmt Detail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Service Mgmt Details</pluralLabel>
    <recordTypes>
        <fullName>Appraiser</fullName>
        <active>true</active>
        <description>Custom Record Type for the Appraiser Service Mgmt Details.</description>
        <label>Appraiser</label>
    </recordTypes>
    <recordTypes>
        <fullName>Attorney</fullName>
        <active>true</active>
        <description>Record Type to specify Attorney Service Mgmt Details</description>
        <label>Attorney</label>
    </recordTypes>
    <recordTypes>
        <fullName>Inspector</fullName>
        <active>true</active>
        <description>Record Type to specify Inspector Service Mgmt Details</description>
        <label>Inspector</label>
    </recordTypes>
    <recordTypes>
        <fullName>Insurance</fullName>
        <active>true</active>
        <description>Custom Record Type for the Insurance Service Mgmt Details.</description>
        <label>Insurance</label>
    </recordTypes>
    <recordTypes>
        <fullName>Third_Party_Reports</fullName>
        <active>true</active>
        <description>Record Type to specify Third Party Report Service Mgmt Details</description>
        <label>Third Party Reports</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>